--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "jest.setup.js", "jest.config.js"  ],
+, "jest.setup.js", "jest.config.js", "tailwind.config.js"  ],
   "exclude": ["node_modules"]
 }
